--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "neurolab-angular": {
+    "lab-angular": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/neurolab-angular",
+            "outputPath": "dist/lab-angular",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -59,10 +59,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "neurolab-angular:build:production"
+              "browserTarget": "lab-angular:build:production"
             },
             "development": {
-              "browserTarget": "neurolab-angular:build:development",
+              "browserTarget": "lab-angular:build:development",
               "host": "0.0.0.0",
               "disableHostCheck": true
             }
@@ -72,7 +72,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "neurolab-angular:build"
+            "browserTarget": "lab-angular:build"
           }
         },
         "test": {
